assignment2-k8s/k8s/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mysql
  labels:
    name: mysql
---
apiVersion: v1
kind: Namespace
metadata:
  name: nodejs-crud
  labels:
    name: nodejs-crud
