assignment2-k8s/k8s/app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-crud
  namespace: nodejs-crud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-crud
  template:
    metadata:
      labels:
        app: nodejs-crud
    spec:
      containers:
      - name: nodejs-crud
        image: nodejs-crud-app:1.0
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: "/"
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: "/"
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-crud
  namespace: nodejs-crud
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: nodejs-crud
